# image-verse-web-app

./: Dockerfile  README.md  pyproject.toml  requirements.txt
app/: .env  fast-api-app.ipynb  main.py
app/api/: routes.py
app/config/: app_config.py  image_captioning_config.py  image_config.py  stable_diffusion_config.py
app/models/: model.py  pydantic_model.py
app/services/: ml.py
app/utils/: app_logger.py  bounding_box_drawer.py  image_file_validation.py  image_processor.py  logger_config.py
test/: test_generate.py
